# bonfire

./: Cargo.toml  MOTIVATION.md  README.md
bonfire/: Cargo.toml  README.md
bonfire-core/: Cargo.toml  README.md
bonfire-core/src/: lib.rs  meta.rs
bonfire-lib/: Cargo.toml
bonfire-lib/src/: lib.rs
bonfire/src/: api.rs  cli.rs  context.rs  main.rs  root.rs  user.rs
bonfire/templates/forum/: index.html
bonfire/templates/meta/: base.html  footer.html  header.html
bonfire/templates/user/: index.html  profile.html
captp-rs/: Cargo.toml  README.md
captp-rs/src/: lib.rs
ocappub-rs/: Cargo.toml  README.md
