[package]
name = "bonfire-core"
version = "0.1.0"
edition = "2021"
authors = ["Ash Walker <ashurstwalker@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
ocappub = { path = "../ocappub-rs" }
clap = { version = "3.0.0-rc.8", features = ["cargo", "derive", "env", "wrap_help"] }
serde = { version = "^1", features = [ "derive" ] }
lazy_static = "^1"
