[package]
name = "bonfire"
version = "0.1.0"
edition = "2021"
authors = ["Ash Walker <ashurstwalker@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonfire-lib = { path = "../bonfire-lib" }
log = "^0.4"
clap = "3.0.0-beta.4"
actix-web = { version = "^3", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
diesel = "^1"
serde = "^1"
tokio = { version = "^1", features = ["full"] }
async-graphql = { version = "^2", features = [] }
askama = { version = "^0.10", features = ["with-actix-web"] }
lazy_static = "^1"